--- a/print.css
+++ b/print.css
@@ -6,26 +6,27 @@
     font-size: 13px;
     color: #000;
     margin: 15mm;
+    background: #fff;
   }
 
   h2 {
     text-align: center;
-    font-size: 18px;
-    margin-bottom: 8mm;
+    font-size: 20px;
+    margin-bottom: 10mm;
     text-transform: uppercase;
     border-bottom: 2px solid #000;
-    padding-bottom: 4mm;
+    padding-bottom: 5mm;
   }
 
   table {
     width: 100%;
     border-collapse: collapse;
-    margin-bottom: 10mm;
+    margin-bottom: 12mm;
   }
 
   th, td {
     border: 1px solid #000;
-    padding: 5px 8px;
+    padding: 6px 10px;
     text-align: left;
     vertical-align: top;
   }
@@ -40,10 +41,12 @@
     background: #ddd;
     font-weight: bold;
     text-align: center;
+    font-size: 14px;
   }
 
+  /* Linie na podpisy */
   .signature-line {
-    height: 25px;
+    height: 30px;
     border-bottom: 1px dotted #000;
   }
 
@@ -51,6 +54,11 @@
     text-align: center;
     font-size: 11px;
     color: #555;
-    margin-top: 15mm;
+    margin-top: 20mm;
+  }
+
+  /* Dodatkowe poprawki dla czytelności */
+  @page {
+    margin: 15mm;
   }
 }
